<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_back"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/scan_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        android:id="@+id/scanner_line_id"
        />
    
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/scanner_line_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/welcome"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textAllCaps="true"
        android:fontFamily="@font/avenir_bold"
        android:textColor="@color/text_color"
        android:letterSpacing="0.1"
        android:id="@+id/welcome_text_id"
        />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/image_desc"
        android:textColor="@color/text_color"
        android:fontFamily="@font/avenir_regular"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:id="@+id/text_desc"
        />
    
    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:clickable="true"
        android:focusable="true"
        android:elevation="10dp"
        android:background="@drawable/import_btn_back"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@id/text_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/take_pic_btn"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/camera"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:id="@+id/camera_img"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_picture"
            android:textAllCaps="true"
            android:fontFamily="@font/avenir_bold"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:textColor="@color/text_black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:clickable="true"
        android:elevation="10dp"
        android:focusable="true"
        android:background="@drawable/import_btn_back"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/take_pic_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/gallery_btn"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/gallery"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:id="@+id/gallery_img"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallery"
            android:textAllCaps="true"
            android:fontFamily="@font/avenir_bold"
            android:layout_gravity="center"
            android:layout_marginStart="44dp"
            android:textColor="@color/text_black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:clickable="true"
        android:focusable="true"
        android:elevation="10dp"
        android:background="@drawable/import_btn_back"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/gallery_btn"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/import_btn"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageView
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:src="@drawable/pdf"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:id="@+id/file_img"
            />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_pdf"
            android:textAllCaps="true"
            android:fontFamily="@font/avenir_bold"
            android:layout_gravity="center"
            android:layout_marginStart="27dp"
            android:textColor="@color/text_black"
            />

    </LinearLayout>








</androidx.constraintlayout.widget.ConstraintLayout>